[tool.poetry]
name = "planner"
version = "0.1.0"
description = ""
authors = ["Lars Skodje <larsskod@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.29.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
watchdog = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
pre-commit = "^3.6.2"
ruff = "^0.3.1"
black = "^24.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
